Fix overflow

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -92,6 +92,7 @@ body {
   color: #9698a6;
   line-height: 1.3;
   min-height: 200vh;
+  overflow-x: hidden;
 }
 
 @media (min-width: 64em) {
